3/15/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.4.1 'Ardee West':
	- 'native' SCTP support;

2/28/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.3 'Ardee West':
	- bandwidth control fixed;
	- STUN/TURN control traffic counted separately from data traffic,
	for the sake of the bandwidth control;
	- higher bandwidth limit capacity on 64 bits systems;
	- redis operations with the realm options fixed;
	
2/18/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.2 'Ardee West':
	- admin_user table schema fixed;
	- REST API docs fixed;
	- Amazon AWS uses syslog;
	
2/3/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.2.1 'Ardee West':
	- (HMAC-)SHA-512 and -384 algorithms added;
	- TOS (DiffServer) and TTL IP header field handling fixed;
	- updates according to the new third-party-auth draft (oauth);
	- peer logging added;
	
2/1/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.1.2 'Ardee West':
	- SSODA updates according to turnbis specs;
	- TRANSPORT attribute handling fixed;
	- hostname-to-IP-address resolution fix;
	- updates for Solaris (name resolution libraries);

1/24/2015 Oleg Moskalenko <mom040267@gmail.com>
Version 4.4.1.1 'Ardee West':
	- https admin server;
	- SSLv2 support cancelled (security concern fixed);
	- The server-side short-term credentials mechanism support cancelled;
	- OpenSSL 1.1.0 supported;
	- shared secrets fixed in MongoDB: multiple secrets per realm allowed;
	- shared secrets admin fixed in Redis;

12/24/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.3.1 'Tolomei':
	- multiple authentication threads;
	- database code cleaned;

12/14/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.3.2.2 'Tolomei':
	- Redis read message queue bug fixed;
	- STUN/TURN ALPN supported (when compiled with OpenSSL 1.0.2+ );
	- DTLS v1.2 supported (when compiled with OpenSSL 1.0.2+ );
	- Auto optimal ECDH parameters (when compiled with OpenSSL 1.0.2+ );
	- TLS/DTLS code cleaning.
